[package]
name = "langen_macro"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A tool to create programming languages"
homepage = "https://github.com/HalloIhr0/langen"
repository = "https://github.com/HalloIhr0/langen"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.23"
regex-syntax = "0.6.28"
syn = { version = "1.0.109", features = ["full"] }
proc-macro2 = "1.0.51"

[lib]
proc-macro = true
