[package]
name = "langen_macro"
version = "2.0.0"
edition = "2021"
license = "MIT"
description = "A tool to create programming languages"
homepage = "https://github.com/HalloIhr0/langen"
repository = "https://github.com/HalloIhr0/langen"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["parsing", "derive", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
regex-automata = { version = "0.4", featrues = ["dfa-build", "syntax"] }
